<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


<FrameLayout
    android:id="@+id/fl_drawing_view_container"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_margin="5dp"
    android:padding="1dp"
    android:background="@drawable/bg_drawing_view_layout"
    app:layout_constraintBottom_toTopOf="@id/ll_paint_colors"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >
    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/background"
        tools:src="@drawable/image_tower"
        />

    <eu.example.drawingapp.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80FFFFFF"
        />
</FrameLayout>



    <LinearLayout
        android:id="@+id/ll_paint_colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/ll_action_btns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container"
        >


        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/skin"
            android:contentDescription="@string/skin_color"
            android:onClick="paintClicked"
            android:background="@color/skin"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"
            android:contentDescription="@string/black_color"
            android:onClick="paintClicked"
            android:background="@color/black"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton

            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/red"
            android:contentDescription="@string/red_color"
            android:onClick="paintClicked"
            android:background="@color/red"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/green"
            android:contentDescription="@string/green_color"
            android:onClick="paintClicked"
            android:background="@color/green"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/blue"
            android:contentDescription="@string/blue_color"
            android:onClick="paintClicked"
            android:background="@color/blue"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/yellow"
            android:contentDescription="@string/yellow_color"
            android:onClick="paintClicked"
            android:background="@color/yellow"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/lollipop"
            android:contentDescription="@string/lollipop_color"
            android:onClick="paintClicked"
            android:background="@color/lollipop"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/random"
            android:contentDescription="@string/random_color"
            android:onClick="paintClicked"
            android:background="@color/random"
            tools:ignore="UsingOnClickInXml" />
        <ImageButton
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/pallet_normal"
            android:tag="@color/white"
            android:contentDescription="@string/white_color"
            android:onClick="paintClicked"
            android:background="@color/white"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/ll_paint_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <ImageButton
            android:id="@+id/ib_gallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/gallery_image"
            android:src="@drawable/ic_gallery"
            />

        <ImageButton
            android:id="@+id/ib_undo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/undo_image"
            android:src="@drawable/ic_undo"
            />


        <ImageButton
            android:id="@+id/ib_brush"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/brush_image"
            android:src="@drawable/ic_brush1"
            />


        <ImageButton
            android:id="@+id/ib_save"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/save_image"
            android:src="@drawable/ic_save"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>